Fix Message z-index bug.

--- a/client/src/components/Message/Message.scss
+++ b/client/src/components/Message/Message.scss
@@ -8,7 +8,7 @@
     color: #fff;
     text-align: center;
     position: fixed;
-    z-index: 1;
+    z-index: 4;
     animation: slideDown 0.4s ease-out;
 
     @media only screen and (max-width: 37.5em) {
